RESOLVED FIXED275890
REGRESSION(276197@main): [GTK] Whatsapp Web QR code doesn't load
https://bugs.webkit.org/show_bug.cgi?id=275890
Summary REGRESSION(276197@main): [GTK] Whatsapp Web QR code doesn't load
Haider Salman
Reported 2024-06-25 22:41:59 PDT
Created attachment 471746 [details] demonstration of the spinner When not logged into web.whatsapp.com the QR code which is supposed to appear on the site doesnt load and instead displays a spinner this issue was fixed before [here](https://bugs.webkit.org/show_bug.cgi?id=203404) but it has reappeared with the reason not being the same so I opened this new bug report
Attachments
demonstration of the spinner (130.48 KB, video/webm)
2024-06-25 22:41 PDT, Haider Salman
no flags
Haider Salman
Comment 1 2024-06-25 22:44:09 PDT
Michael Catanzaro I tried it with regular epiphany which is webkitgtk version 2.44.2 and the QR code works fine there
Michael Catanzaro
Comment 2 2024-06-26 05:54:00 PDT
OK, I can reproduce. (In reply to Haider Salman from comment #1) > Michael Catanzaro I tried it with regular epiphany which is webkitgtk > version 2.44.2 and the QR code works fine there Great, that's important information. Now I can attempt to bisect it, so it's drastically more likely to be fixed.
Haider Salman
Comment 3 2024-06-26 07:45:01 PDT
thats great to hear good luck 👍
Michael Catanzaro
Comment 4 2024-06-26 14:47:56 PDT
This broke in 276197@main "Adding layout tests for postMessage CryptoKey for ServiceWorkers" which has a misleading commit message
Michael Catanzaro
Comment 5 2024-06-26 14:55:22 PDT
Guess: maybe the default key doesn't work anymore? What is this master key? Why would an application want to override it? Do we need to expose API to allow applications to configure it? Surely WebCrypto is not just expected to fail by default now?
Michael Catanzaro
Comment 6 2024-09-24 07:46:19 PDT
So if this is preventing users from logging into WhatsApp, we should revert it now and ask questions later. Too bad I didn't do that in June, when it would have been easier, because there are conflicts. I don't care enough about WhatsApps to sort through this myself; anybody else should feel free.
Nitin Mahendru
Comment 7 2024-09-26 23:30:41 PDT
Nitin Mahendru
Comment 8 2024-09-26 23:31:26 PDT
Nitin Mahendru
Comment 9 2024-09-27 08:26:52 PDT
Is it possible to verify that your problem is solved with this patch ? IIUC it should. @Michael, @Haider ?
Michael Catanzaro
Comment 10 2024-09-27 08:38:08 PDT
I'll test soon.
Michael Catanzaro
Comment 11 2024-09-27 10:28:04 PDT
(In reply to Nitin Mahendru from comment #9) > Is it possible to verify that your problem is solved with this patch ? IIUC > it should. > @Michael, @Haider ? Confirmed, your patch works. Thanks!
EWS
Comment 12 2024-09-27 11:56:41 PDT
Committed 284377@main (0a79bb9adb4c): <https://commits.webkit.org/284377@main> Reviewed commits have been landed. Closing PR #34348 and removing active labels.
Adrian Perez
Comment 13 2024-09-29 12:37:37 PDT
*** Bug 280582 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.