For Non Apple platforms, allow a blank master key for wrapping. https://bugs.webkit.org/show_bug.cgi?id=275890 rdar://136807212

Reviewed by Carlos Garcia Campos.

In https://commits.webkit.org/276197@main, the flow for Wrapping/Unwrapping of
CryptoKeys for local storage was changed to early exit if the webCryptoMasterKey is NULL.

For non apple ports the wrap/unwrap operations are passthrough and don't actually use the master key.
Now, because the early-exit behavior, for non-apple ports, the wrap/unwrap operations are now returning null in cases where master key is null/zero length buffer.
Earlier they were not. That has been investigated as the likely cause for the Whatsapp Spinner in this bug.

This change brings back that behavior for non apple ports.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::wrapCryptoKey):
(WebKit::WebPageProxy::unwrapCryptoKey):
* Source/WebKit/UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::wrapCryptoKey):
(WebKit::WebProcessProxy::unwrapCryptoKey):

Canonical link: https://commits.webkit.org/284377@main